content updated, BaseProject wrap style fixed

--- a/portfolio/.vuepress/theme/styles/theme.styl
+++ b/portfolio/.vuepress/theme/styles/theme.styl
@@ -11,11 +11,11 @@ html, body
   background-color #fff
 
 body
-  font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
-  -webkit-font-smoothing antialiased
-  -moz-osx-font-smoothing grayscale
-  font-size 18px
-  color $textColor
+  font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif !important
+  -webkit-font-smoothing antialiased !important
+  -moz-osx-font-smoothing grayscale !important
+  font-size 18px !important
+  color $textColor !important
 
 .page
   @extend $wrapper
